--- a/netlify-deploy/projects.json
+++ b/netlify-deploy/projects.json
@@ -21,7 +21,7 @@
   },
   {
     "id": "church-website",
-    "title": "Church Management System",
+    "title": "Nablis - Church Community Platform",
     "description": "A comprehensive full-stack web application designed for managing church community members, events, and communications. Features include multi-step member registration with Ethiopian/Amharic labels, admin dashboard with user statistics, role-based access control (Admin/Moderator/Member), real-time messaging system, event management, and notification center. Built specifically for Ethiopian Orthodox Tewahedo Church community with complete CRUD operations and secure authentication.",
     "image": "images/nablis-screenshot.png",
     "github_link": "https://github.com/ayni2421/nablis",
